# MimicRec

./: .gitignore  .gitmodules  README.ja.md  README.md  architectures.drawio  pytest.ini
backend/: pyproject.toml
backend/mimicrec/: __init__.py  errors.py  types.py
backend/mimicrec/adapters/: fault_profile.py  mock_robot.py  mock_teleop.py  rebotarm.py  rebotarm_protocol.py  rebotarm_zmq.py  robot.py  sim_bridge.py  so101.py  so_leader.py  teleop.py  types.py  web_teleop.py
backend/mimicrec/annotator/: subtask.py
backend/mimicrec/api/: app.py  deps.py  errors.py  schemas.py  util.py
backend/mimicrec/cameras/: manager.py  mock_camera.py  opencv_camera.py  preview.py  recording.py  sim_camera.py  v4l2_caps.py
backend/mimicrec/cloud/: hf_pusher.py  hub_meta.py  push_state.py  snapshot.py
backend/mimicrec/config/: inference_loader.py  loader.py
backend/mimicrec/datasets/: archive.py  reader.py
backend/mimicrec/gopro/: device.py  dl_queue.py  dl_worker.py  ffmpeg_pass.py  mock.py  preset_picker.py  preview.py  recorder.py  registry.py  types.py
backend/mimicrec/inference/: action_decoder.py  chunk_buffer.py  client.py  contract.py  control_loop.py  producer.py  safety.py  types.py
backend/mimicrec/kinematics/: __init__.py  fk.py  ik.py
backend/mimicrec/mappers/: base.py  identity.py  so_to_rebotarm_ee.py
backend/mimicrec/recording/: atomic_io.py  dataset_layout.py  metadata.py  parquet_row.py  pending.py  writer.py
backend/mimicrec/session/: README.md  control_loop.py  dispatcher.py  idle.py  lifecycle.py  replay.py  replay_safety.py  state.py
(+390 files in other folders)
