[project]
name = "mimicrec"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pyarrow>=15",
  "numpy>=1.26",
  "omegaconf>=2.3",
  "pydantic>=2.7",
  "opencv-python>=4.9",
  "av>=12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mimicrec"]
