[project]
name = "mimicrec"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pyarrow>=15",
  "numpy>=1.26",
  "omegaconf>=2.3",
  "pydantic>=2.7",
  "opencv-python>=4.9",
  "av>=12",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "scipy>=1.15.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "httpx-ws>=0.6",
]
# Forward / inverse kinematics (placo). Needed only when a robot config
# declares a `kinematics:` block (e.g. SO-101 EE pose recording).
kinematics = [
  "placo>=0.9.6,<0.9.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mimicrec"]

[dependency-groups]
dev = [
    "aiohttp>=3.13.5",
    "pytest-aiohttp>=1.1.0",
]
